--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -16,8 +16,16 @@
  * under the License.
  */
 
+/**
+ * Variables related to common styles
+ */
 @main-color: #202020;
+@main-font-color: rgba(255, 255, 255, 0.5);
+@header-font-color: @main-font-color;
 
+/**
+ * Styles common to the app
+ */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -26,9 +34,31 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: @main-color;
+  color: @main-font-color
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
+}
+
+h3 {
+  color: @header-font-color;
+  font-size: 0.95rem;
+  letter-spacing: 0.5px;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.app-header {
+  height: 6.5%;
+}
+
+.app-body {
+  height: 93.5%;
+  display: flex;
 }
