--- a/src/styles/script-editor.less
+++ b/src/styles/script-editor.less
@@ -1,10 +1,36 @@
-@script-editor-header-height: 5%;
+/**
+ * Copyright (c) 2021, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+ *
+ * WSO2 Inc. licenses this file to you under the Apache License,
+ * Version 2.0 (the "License"); you may not use this file except
+ * in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied. See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
 
+/**
+ * Variables related to script based flow styles
+ */
+@script-editor-header-height: 5%;
+@script-based-flow-width: 50%;
+@script-based-flow-height: 97.5%;
+
+/**
+ * script based flow styles
+ */
 .script-based-flow-wrapper {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    width: @script-based-flow-width;
+    height: @script-based-flow-height;
     border: 1px solid #49494c;
 }
 
@@ -17,6 +43,6 @@
 }
 
 .script-editor-wrapper {
-    height: 100%-1px-@script-editor-header-height;
-    width: 100%-1px;
+    height: 100%-@script-editor-header-height;
+    width: 100%;
 }
