Add common styles for buttons

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -28,6 +28,7 @@
  */
 body {
   margin: 0;
+  font-family: 'Roboto', sans-serif;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -62,3 +63,41 @@ h3 {
   height: 93.5%;
   display: flex;
 }
+
+.primary-button {
+  cursor: pointer;
+  display: inline-block;
+  outline: 0;
+  border: none;
+  vertical-align: baseline;
+  background-color: #ff5000;
+  color: #fff;
+  padding: .78571429em 1.5em .78571429em;
+  font-weight: 500;
+  line-height: 1em;
+  border-radius: 3px;
+  margin-right: 0.25em;
+}
+
+:disabled{
+  background-color: #cccccc;
+}
+
+.secondary-button {
+  margin-left: 0;
+  margin-right: .25em;
+  background: 0 0 !important;
+  color: #ff5000;
+  border: none;
+  padding: .78571429em 1.5em .78571429em;
+  cursor: pointer;
+}
+
+.float-left {
+  float:left;
+}
+
+.float-right {
+  float: right;
+}
+
