--- a/src/styles/core/cards.less
+++ b/src/styles/core/cards.less
@@ -75,6 +75,10 @@
     margin: 9px 18px 9px 0;
 }
 
+.disabled-button-wrapper {
+    display: flex;
+}
+
 .authenticator {
     width: 90px;
     height: 90px;
