--- a/src/styles/core/typography.less
+++ b/src/styles/core/typography.less
@@ -22,15 +22,18 @@
 
 .hint-container {
     color: rgba(0,0,0,0.6);
-    font-size: 0.75rem;
+    font-size: 0.85rem;
     display: flex;
     align-items: center;
     margin-bottom: 5px;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .hint-icon {
-    padding-inline: 10px;
     margin-top: -1px;
     opacity: 0.7;
+}
+
+.hint-text {
+    padding-left: 10px;
 }
