--- a/src/styles/script-based-flow.less
+++ b/src/styles/script-based-flow.less
@@ -21,7 +21,7 @@
  */
 @script-editor-header-height: 5%;
 @script-based-flow-width: 37%;
-@script-based-flow-height: 97.5%;
+@script-based-flow-height: 100%;
 
 /**
  * script based flow styles
@@ -32,6 +32,7 @@
     width: @script-based-flow-width;
     height: @script-based-flow-height;
     border: 1px solid #49494c;
+    overflow: hidden;
 }
 
 .script-based-flow-header {
