--- a/src/styles/core/sidebar.less
+++ b/src/styles/core/sidebar.less
@@ -20,7 +20,7 @@
  * Variables related to sidebar styles
  */
 @sidebar-width: 13%;
-@sidebar-height: 99.8%;
+@sidebar-height: 100%;
 
 /**
  * sidebar styles
@@ -36,10 +36,9 @@
 }
 
 .sidebar-header {
-    font-size: 1rem;
-    margin: 2.3vh 0 2vh;
+    font-size: 1.2rem;
+    padding: 10px 16px 0;
     letter-spacing: 1px;
-    padding-inline: 16px;
 }
 
 .sidebar-options {
@@ -68,7 +67,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 16px 20px;
+    padding: 25px 20px;
     margin: 8px 0 5px;
     background-color: rgb(45, 45, 45);
     border-radius: 6px;
@@ -78,7 +77,7 @@
     color: #E3E3E3;
     cursor: pointer;
     user-select: none;
-    width: 82%;
+    width: 100%;
 }
 
 .template-container:hover {
