--- a/src/styles/core/svg.less
+++ b/src/styles/core/svg.less
@@ -1,3 +1,24 @@
+/**
+ * Copyright (c) 2021, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+ *
+ * WSO2 Inc. licenses this file to you under the Apache License,
+ * Version 2.0 (the "License"); you may not use this file except
+ * in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied. See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+
+/**
+ * svg styles
+ */
 .svg-container {
     display: flex;
     flex-direction: column;
@@ -12,4 +33,27 @@
 
 .text-add-authenticators {
     fill: #919293;
+}
+
+.option-button-rectangle {
+    height:40px;
+    width: 350px;
+    stroke: rgba(188,188,188,1);
+    stroke-width: 2px;
+}
+
+.option-button-text {
+    font-size: 16px;
+    fill: #fff;
+    dominant-baseline: middle;
+    letter-spacing: 0.5px;
+}
+
+.option-text-left {
+    fill: #0f1011;
+}
+
+.option-text-right {
+    fill: #0f1011;
+    font-weight: 600;
 }
