--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -45,7 +45,8 @@ code {
 
 h3 {
   color: @header-font-color;
-  font-size: 0.95rem;
+  font-size: 1.2rem;
+  padding-top: 10px;
   letter-spacing: 0.5px;
 }
 
@@ -89,7 +90,7 @@ h3 {
   background: 0 0 !important;
   color: #ff5000;
   border: none;
-  padding: .78571429em 1.5em .78571429em;
+  padding: .78571429em 1.5em 1.5em;
   cursor: pointer;
 }
 
