--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -16,6 +16,8 @@
  * under the License.
  */
 
-@import "./app";
-@import "./script-editor";
-@import "./sidebar";
+@import "app";
+@import "script-based-flow";
+@import "visual-flow";
+@import "flow-elements";
+@import "core";
