--- a/src/styles/flow-elements.less
+++ b/src/styles/flow-elements.less
@@ -27,7 +27,7 @@
  * Authentication Step Node styles
  */
 .step-wrapper {
-    margin-top: -62px;
+    margin-top: -38px;
 }
 
 .step-header {
@@ -71,7 +71,7 @@
     color: #FFF;
     padding: 10px;
     font-size: 14px;
-    width: 277px;
+    width: 290px;
     height: 410px;
     border-radius: 2px;
 }
@@ -108,6 +108,17 @@
     margin-left: -35px;
     word-wrap: break-word;
     align-items: center;
+}
+
+/**
+ * Authentication Option Node styles
+ */
+.authentication-option-node {
+    width: 240px;
+    height: 270px;
+    display: flex;
+    align-items: center;
+    background-color: #313234;
 }
 
 /**
