update styles for flow elements

--- a/src/styles/flow-elements.less
+++ b/src/styles/flow-elements.less
@@ -121,6 +121,24 @@
     background-color: #313234;
 }
 
+.common-authentication-option-node {
+    width: 240px;
+    background-color: #fff;
+    height: 200px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    color: #0f1011;
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 10px;
+}
+
+.common-authentication-option-node-text {
+    padding-bottom: 10px;
+}
+
 /**
  * Plus Node styles
  */
@@ -128,6 +146,13 @@
     font-size: 30px;
     cursor: pointer;
     display: flex;
+}
+
+/**
+ * Connector Node styles
+ */
+.connector-node {
+    font-size: 14px;
 }
 
 /**
