--- a/src/styles/flow-elements.less
+++ b/src/styles/flow-elements.less
@@ -35,14 +35,16 @@
     flex-direction: row;
     align-items: center;
     color: #c4c2c2;
-    font-size: 1rem;
-    height: 6.25vh;
+    height: 61px;
 }
 
 .step-header-text {
     justify-content: flex-start;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     margin-left: 2px;
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
 }
 
 .header-label-container {
@@ -98,16 +100,15 @@
  */
 .condition-node {
     color: #FFF;
+    margin-top: -1.5px;
 }
 
 .condition-node-text-container {
-    display: flex;
-    flex-direction: column;
     position: absolute;
-    width: 120px;
-    margin-left: -35px;
+    width: 100px;
+    margin-left: -20px;
     word-wrap: break-word;
-    align-items: center;
+    text-align: center;
 }
 
 /**
@@ -152,7 +153,8 @@
  * Connector Node styles
  */
 .connector-node {
-    font-size: 14px;
+    font-size: 12px;
+    margin-top: -2px;
 }
 
 /**
