add styles for alert modal

--- a/src/styles/core/modal.less
+++ b/src/styles/core/modal.less
@@ -36,6 +36,16 @@
     font-size: 1.2rem;
 }
 
+.modal-content {
+    display: flex;
+    padding: 10px;
+    font-size: 1.2rem;
+}
+
+.modal-header-with-icon {
+    display: flex;
+    align-items: center;
+}
 
 /**
  * Styles for Component Selector modal
@@ -153,4 +163,24 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding-left: 0.5rem;
+}
+
+/**
+ * Styles for confirmation modal
+ */
+
+.alert-modal {
+    max-width: 40vw;
+}
+
+.success-icon {
+    font-size: 2.2rem;
+    margin-right: 15px;
+    color: #1BC462;
+}
+
+.error-icon {
+    font-size: 2.2rem;
+    margin-right: 15px;
+    color: #f61018;
 }
