--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -46,7 +46,7 @@ code {
 h3 {
   color: @header-font-color;
   font-size: 1.2rem;
-  padding-top: 10px;
+  padding-top: 13px;
   letter-spacing: 0.5px;
 }
 
@@ -56,14 +56,14 @@ h3 {
   height: 100vh;
 }
 
-.app-header {
-  height: 6.5%;
-}
-
 .app-body {
   height: 93.5%;
   display: flex;
 }
+
+/**
+ * Styles for the app-buttons
+ */
 
 .primary-button {
   cursor: pointer;
